# Projet-C-Rationals

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
doc/html/: Rationals_8hpp_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_98e3e532373e20751ecec6c4bbf28a1e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  index.html  md_README.html  pages.html
doc/html/search/: pages_0.js
doc/latex/: Rationals_8hpp_source.tex  files.tex  md_README.tex  refman.tex
include/rationals/: Rationals.hpp
src/: CMakeLists.txt  Rationals.cpp
test/: CMakeLists.txt  test.cpp
unitests/: CMakeLists.txt  unit_test.cpp
