cmake_minimum_required(VERSION 3.10)

project(Rationals VERSION 0.1)

set(INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/include)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)

# add_subdirectory(src)
add_subdirectory(unitests)

set(DOXYGEN_GENERATE_HTML YES)
set(DOXYGEN_GENERATE_LATEX YES)
set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES)
set(DOXYGEN_EXTRACT_ALL YES)
# set(DOXYGEN_EXTRACT_STATIC YES)
set(DOXYGEN_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/doc)
find_package(Doxygen)
doxygen_add_docs(doc ${PROJECT_SOURCE_DIR}/include/rationals WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
